# c_in_python

./: .gitignore  README.md  example.py
module/: CMakeLists.txt  build_script.py  declarations.h
module/inc/: template.h
module/src/: template.c
